# bidict

./: .LICENSE_HEADER  .appveyor.yml  .coveragerc  .editorconfig  .envrc  .flake8  .gitignore  .gitpod.yml  .lgtm.yml  .pre-commit-config.yaml  .pydocstyle.ini  .pylintrc  .readthedocs.yml  .refurb.toml  .travis.yml  CHANGELOG.rst  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE  LICENSE_HEADER  MANIFEST.in  PYPI_DOWNLOAD_STATS.rst  README.rst  SECURITY.rst  _typos.toml  appveyor.yml  benchmark_linux_arm64.sh  bidict.py  build-docs.sh  cachegrind.py  conftest.py  flake.nix  foo.py  init_dev_env  init_dev_env.sh  microbenchmarks.py  mypy.ini  pyproject.toml  (+14 more)
.benchmarks/Linux-CPython-3.12-64bit/: baseline.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml  codeql.yml  dependabot.yml
.github/workflows/: benchmark.yml  benchmark_pr_comment.yml  codeql.yml  lint.yml  pre-commit.yaml  pre-commit.yml  release-to-pypi.yml  release-to-test-pypi.yml  test.yml  tests.yaml  tests.yml  update_actions.yml  update_benchmark_baselines.yml  update_dev_deps.yml  update_flake_lock.yml  update_github_actions.yml
_static/: bidict-types-diagram.dot  bidict-types-diagram.txt  custom.css  type-hierarchy.txt
assets/: bidict-types-diagram.dot  custom.css  custom.js  logo.pxm
bidict/: VERSION  __init__.py  _abc.py  _base.py  _base_opt.py  _bidict.py  _clsprop.py  _collapsing.py  _common.py  _compat.py  _defaultbidict.py  _delegating.py  _delegating_mixins.py  _dup.py  _dup_behaviors.py  _exc.py  _exceptions.py  _frozen.py  _frozenbidict.py  _frozenordered.py  _hotloop.py  _inv.py  _iter.py  _loose.py  _marker.py  _miss.py  _mut.py  _named.py  _native.py  _noop.py  _ordered.py  _orderedbase.py  _orderedbidict.py  _proxied.py  _sntl.py  _typing.py  _util.py  compat.py  metadata.py  util.py
dev-deps/: dev.env  dev.in  dev.txt  docs.in  docs.txt  lint.txt  py_ver.env  test.in  test.txt  update_dev_dependencies
dev-deps/pypy3.10/: test.txt
dev-deps/pypy3.8/: test.txt
dev-deps/pypy3.9/: test.txt
dev-deps/python3.10/: test.txt
dev-deps/python3.11/: dev.txt  docs.txt  lint.txt  test.txt
dev-deps/python3.12/: dev.txt  docs.txt  test.txt
dev-deps/python3.8/: test.txt
dev-deps/python3.9/: test.txt
docs/: Makefile  _static  addendum.rst  api.rst  basic-usage.doctest.rst  basic-usage.rst  beware-on_dup_kv-overwrite.rst.inc  caveat-collapsing.rst.inc  caveat-different-values-same-hash.doctest.rst.inc  caveat-different-values-same-hash.rst.inc  caveat-equivalence-vs-identity.rst.inc  caveat-equivalent-distinct-hashables.rst.inc  caveat-frozenbidict-hash.rst.inc  caveat-hashable-values.doctest.rst.inc  caveat-hashable-values.rst.inc  caveat-init-update.rst.inc  caveat-inv-reference-cycle.rst.inc  caveat-mutation.doctest.rst.inc  caveat-nan-as-key.doctest.rst.inc  caveat-nan-as-key.rst.inc  caveat-none-slice.rst.inc  caveat-unique-values.doctest.rst.inc  caveat-unique-values.rst.inc  caveats.doctest.rst  caveats.rst  changelog.rst  code-of-conduct.rst.inc  conf.py  conftest.py  credits.rst  cut.rst  extending.rst  extending.rst.inc  frozenbidict.doctest.rst.inc  frozenbidict.rst.inc  index.rst  interop.rst.inc  intro.doctest.rst  intro.rst  inv-avoids-reference-cycles.rst.inc  (+26 more)
docs/_static/: bidict-types-diagram.dot  build-bidict-types-diagram  build-bidict-types-diagram.sh  custom.css  custom.js
requirements/: dev.in  dev.txt  docs.in  docs.txt  lint.in  lint.txt  precommit.txt  pylint.txt  tests.in  tests.txt
rust/bidict_base_opt_native/: Cargo.toml  pyproject.toml
rust/bidict_base_opt_native/src/: lib.rs
test/: test_basics.py  test_docs_content.py  test_large_lists.py
tests/: __init__.py  bidict_test_fixtures.py  conftest.py  doctest_bidict.bidict.txt  doctest_bidict.loosebidict.txt  doctest_bidict.txt  doctest_namedbidict.txt  doctest_pairs.txt  microbenchmarks.py  test_benchmark.py  test_bidict.bidict.txt  test_bidict.collapsingbidict.txt  test_bidict.loosebidict.txt  test_bidict.py  test_bidict.txt  test_class_relationships.py  test_compat_shims.py  test_eq_and_hash.py  test_equality.py  test_frozenbidict.txt  test_hypothesis.py  test_inverted.txt  test_loosebidict.txt  test_metadata.py  test_microbenchmarks.py  test_namedbidict.txt  test_native.py  test_orderedbidict.txt  test_pairs.txt  test_polymorphic_equality.py  test_slice.py  test_subclasshook.py  test_util.inverted.txt  test_util.pairs.txt  test_version.py
tests/hypothesis/: _setup_hypothesis.py  _strategies.py  _types.py  test_properties.py
tests/properties/: __init__.py  _strategies.py  _types.py  mutations.py  test_properties.py
tests/property_tests/: __init__.py  _strategies.py  _types.py  test_properties.py
timing/: time_manual_reverse_dict.py
