[project]
name = "bidict"
version = "0.23.2.dev0"
description = "The bidirectional mapping library for Python."
authors = [{ name = "Joshua Bronson", email = "jabronson@gmail.com" }]
license = "MPL-2.0"
license-files = ["LICENSE"]
dependencies = [
  # bidict/_typing.py's `typing`/`typing_extensions` imports branch on python<3.12
  "typing_extensions>=4.0; python_version<'3.12'",
]
requires-python = ">=3.11"
readme = "README.rst"
keywords = [
  "bidict",
  "bimap",
  "bidirectional",
  "dict",
  "dictionary",
  "mapping",
  "collections",
]
classifiers = [
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Typing :: Typed",
]

[project.urls]
# https://github.com/pypi/warehouse/blob/main/warehouse/templates/packaging/detail.html#L20-L62
Changelog = "https://bidict.readthedocs.io/changelog.html"
Documentation = "https://bidict.readthedocs.io"
Sponsor = "https://bidict.readthedocs.io/#sponsoring"
Repository = "https://github.com/jab/bidict"

[dependency-groups]
test = [
  "coverage",
  "hypothesis",
  "pytest",
  "pytest-benchmark",
  "pytest-sphinx",
  "pytest-xdist",
  "sortedcollections",
  "sortedcontainers",
  "ty>=0.0.58",
  "typing_extensions",
]
dev = [
  "pytest-clarity",
  "pytest-icdiff",
  "pytest-sugar",
  "tox",
  "tox-uv",
]
docs = [
  "sphinx",
  "sphinx-copybutton",
  "furo",
]

[tool.uv]
default-groups = ["test", "dev", "docs"]

[tool.uv.build-backend]
module-root = ""
source-exclude = [".mypy_cache"]

[build-system]
requires = ["uv_build>=0.7.13,<0.8.0"]
build-backend = "uv_build"

[tool.ty.src]
include = ["bidict", "tests"]

[tool.ty.terminal]
error-on-warning = true

[tool.ty.rules]
# ty has no `strict`-mode bundle like mypy's; instead, ratchet up the rules that
# default to `warn`/`ignore` but that we want enforced as errors. `error-on-warning`
# above already makes the `warn`-level rules fatal; the following promote rules that
# default to `ignore` (so are otherwise silent even under `error-on-warning`).
missing-type-argument = "error"       # analogous to mypy's disallow_any_generics
missing-override-decorator = "error"  # require @override on overriding methods

[tool.ruff]
preview = true
line-length = 121

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
extend-select = [
  "A",
  "ARG",
  "B",
  "BLE",
  "E",
  "F",
  "FA",
  "FLY",
  "FURB",
  "G",
  "I",
  "ICN",
  "PERF",
  "PGH",
  "PIE",
  "PT",
  "PTH",
  "RET",
  "RSE",
  "RUF",
  "SLOT",
  "T20",
  "T100",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  "PLC0414", # Allow explicit re-exports (import X as X)
  "PYI025",  # Prefer `Set` over `AbstractSet` for readability
  "RUF067",  # Allow __init__.py to set __module__ on re-exported classes
  "SIM118",  # https://github.com/astral-sh/ruff/issues/4481
]
typing-modules = ["bidict._typing"]

[tool.ruff.lint.isort]
force-single-line = true
lines-after-imports = 2

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
preview = true
quote-style = "single"

[tool.pytest]
addopts = [
  "-vv",
  "--doctest-modules",
  "--doctest-glob=docs/*.rst",
  "--durations=5",
  "--hypothesis-profile=less-examples",
  "--numprocesses=auto",
  # Benchmarks are run separately (see the benchmark tox env and workflow, which
  # invoke pytest with `-c /dev/null` to bypass this config), so unload
  # pytest-benchmark here. Otherwise, being installed, it loads on every run and
  # warns under xdist (which addopts enables above) that it is auto-disabling itself.
  "-p", "no:benchmark",
]
doctest_optionflags = ["ELLIPSIS"]
# Treat warnings as errors so deprecations etc. fail the suite instead of going
# unnoticed. (The benchmark plugin is unloaded above so its xdist warning
# doesn't trip this.)
filterwarnings = ["error"]
strict = true
testpaths = ["bidict", "tests", "docs"]
