# Copyright 2009-2022 Joshua Bronson. All Rights Reserved.
#
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.


# https://packaging.python.org/guides/single-sourcing-package-version/#:~:text=%5Bmetadata%5D%0Aversion%20%3D%20attr%3A%20package.__version__
[metadata]
version = attr: bidict.__version__

# https://wheel.readthedocs.io/en/stable/user_guide.html#building-wheels
[bdist_wheel]
# No longer Python 2-compatible -> disable universal wheels:
universal = 0


# http://flake8.pycqa.org/en/latest/user/configuration.html
[flake8]
exclude =
  __pycache__,
  .git,
  .tox
  bidict/_version.py,
  docs/conf.py,

ignore =
  E265,  # block comment should start with '# '
  E266,  # too many leading '#' for block comment
  E301,  # expected 1 blank line, found 0 (prevents idiomatic type hints)
  E302,  # expected 2 blank lines, found 0 (prevents idiomatic type hints)
  E402,  # import not at top of file
  E501,  # line too long
  E704,  # more than one statement on a single line (prevents idiomatic type hints)
  E722,  # broad except
  F811,  # redefinition of unused ... (prevents idiomatic type hints)

per-file-ignores =
  # __init__.py collects functionality implemented in the rest of the package
  # for the sole purpose of exporting it under the `bidict` module namespace,
  # so ignore F401 in this file ("imported but unused").
  bidict/__init__.py:F401

# https://pydocstyle.readthedocs.io/en/latest/snippets/config.html
[pydocstyle]
add_ignore =
  D102,  # missing docstring in public method (prevents idiomatic type hints)
  D103,  # missing docstring in public function (prevents idiomatic type hints)
  D107,  # missing docstring in __init__ (prevents idiomatic type hints)
  D105,
  D205,
  D400,
  D401,
  D402


# pylint config is in .pylintrc
